components/soccer/match-detail/tabs/match-info-tab/style.scss
.display-none {
    display: none;
}

.collapse, .expand {
    display: inline-block;
    float: right;

    &:hover {
        cursor: pointer;
    }
}

.left-section, .right-section {
    width: 25.5rem;
    .mobile & {
        display: none;
    }
}

.ball-tracker {
    width: calc(100% - 25.5rem - 25.5rem);
    box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.25);
    border-radius: 0.4rem;
    .ball-tracker-header {
        padding: .8rem 1.2rem;
        background-color: #fff;
        .text {
            font-size: 1.4rem;
            color: #000;
            text-transform: uppercase;
            font-weight: bold;
        }
        .icon-arrow-down:before {
            font-size: 0.5rem;
        }
    }
}

.info-tab {
    display: flex;
}

.expand .icon-arrow-down {
    transform: rotate(180deg);
    display: inline-block;
    position: relative;
    top: .4rem;
}

